Fix scrollbar width

--- a/products/ep/index.css
+++ b/products/ep/index.css
@@ -26,11 +26,12 @@
 
 ::-webkit-scrollbar {
   background-color: black;
-  width: 0.75rem;
+  width: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #eeeeee;
+  border-radius: 10px;
 }
 
 * {
